--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,30 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-PROJECT(hahanogo)
+#PROJECT(hahanogo)
 
-SET(EXECUTABLE hahanogo)
+#SET(EXECUTABLE hahanogo)
+#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall -O3")
+#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+#FILE(GLOB SRC_FILES *.cpp)
+#ADD_EXECUTABLE(${EXECUTABLE}  ${SRC_FILES})
+
+#MESSAGE(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
+#SET(PROJECT_LIBRARIES ${PYTHON_LIBRARIES} )
+#SET(PROJECT_INCLUDES ${PYTHON_INCLUDE_DIRS} )
+
+#MESSAGE(Project_include_path: ${PROJECT_INCLUDES})
+#MESSAGE(Project_libraries_path: ${PROJECT_LIBRARIES})
+#INCLUDE_DIRECTORIES(${PROJECT_INCLUDES})
+#TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PROJECT_LIBRARIES})
+PROJECT(TCG_NOGO)
+
+SET(EXECUTABLE TCG_NOGO)
 SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -Wall -O3")
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
-FILE(GLOB SRC_FILES *.cpp)
+FILE(GLOB SRC_FILES 
+    Main2.cpp
+    MCTStree2.cpp
+    ucbnode2.cpp
+    board.cpp
+)
 ADD_EXECUTABLE(${EXECUTABLE}  ${SRC_FILES})
-
-MESSAGE(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
-SET(PROJECT_LIBRARIES ${PYTHON_LIBRARIES} )
-SET(PROJECT_INCLUDES ${PYTHON_INCLUDE_DIRS} )
-
-MESSAGE(Project_include_path: ${PROJECT_INCLUDES})
-MESSAGE(Project_libraries_path: ${PROJECT_LIBRARIES})
-INCLUDE_DIRECTORIES(${PROJECT_INCLUDES})
-TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PROJECT_LIBRARIES})
